[gd_scene load_steps=10 format=3 uid="uid://b23lagjf55n65"]

[ext_resource type="Script" uid="uid://cqhq3d7tss6e5" path="res://scenes/game/popup_message.gd" id="1_eol4j"]
[ext_resource type="Texture2D" uid="uid://bbyh2gpahtady" path="res://assets/icons/damage_counter_red.png" id="2_rj1lw"]
[ext_resource type="Texture2D" uid="uid://b60h4ltr5e3xx" path="res://assets/icons/tile_heart.png" id="3_f1n73"]
[ext_resource type="Texture2D" uid="uid://feoht3s2ddpa" path="res://assets/icons/shield_silver.png" id="3_hwote"]

[sub_resource type="Animation" id="Animation_fg68h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OuterContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8ohpc"]
resource_name = "play_message"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OuterContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.6667, 1.9667),
"transitions": PackedFloat32Array(1, 0.329877, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30), Vector2(0, -30), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.433333, 1.7667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"message_done"
}]
}

[sub_resource type="Animation" id="Animation_0nwv7"]
resource_name = "play_message_fast"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OuterContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.06667, 1.2),
"transitions": PackedFloat32Array(1, 0.329877, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30), Vector2(0, -30), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 1.06667, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"message_done"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v2y8r"]
_data = {
&"RESET": SubResource("Animation_fg68h"),
&"play_message": SubResource("Animation_8ohpc"),
&"play_message_fast": SubResource("Animation_0nwv7")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2hxr7"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="PopupMessage" type="Node2D"]
script = ExtResource("1_eol4j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v2y8r")
}

[node name="OuterContainer" type="Node2D" parent="."]

[node name="OuterMargin" type="MarginContainer" parent="OuterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -20.0
offset_right = 104.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupPanelContainer" type="PanelContainer" parent="OuterContainer/OuterMargin"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2hxr7")

[node name="MarginContainer" type="MarginContainer" parent="OuterContainer/OuterMargin/PopupPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CenterContainer" type="CenterContainer" parent="OuterContainer/OuterMargin/PopupPanelContainer/MarginContainer"]
layout_mode = 2

[node name="PopupMessage" type="RichTextLabel" parent="OuterContainer/OuterMargin/PopupPanelContainer/MarginContainer/CenterContainer"]
layout_mode = 2
text = "This is a sample message"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="IconMargin" type="MarginContainer" parent="OuterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="OuterContainer/IconMargin"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterContainer/IconMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DamageIcon" type="TextureRect" parent="OuterContainer/IconMargin/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_rj1lw")
expand_mode = 1

[node name="HeartIcon" type="TextureRect" parent="OuterContainer/IconMargin/VBoxContainer/MarginContainer"]
visible = false
modulate = Color(0.152941, 0.376471, 0.227451, 1)
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_f1n73")
expand_mode = 1

[node name="ShieldIcon" type="TextureRect" parent="OuterContainer/IconMargin/VBoxContainer/MarginContainer"]
visible = false
modulate = Color(0.207843, 0.207843, 0.454902, 1)
layout_mode = 2
texture = ExtResource("3_hwote")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="OuterContainer/IconMargin"]
layout_mode = 2
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -10

[node name="NumberLabel" type="Label" parent="OuterContainer/IconMargin/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "230"
horizontal_alignment = 1
vertical_alignment = 1
